<resources>
    <!-- Lorem ipsum -->
    <string name="lipsum_header">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="app_name">QC App Test</string>

    <!-- Common strings -->
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="apu">APU</string>
    <string name="apiit">APIIT</string>
    <string name="task">Task</string>
    <string name="issue">Issue</string>
    <string name="chat_teams">Chat on Teams</string>
    <string name="group_chat_teams">Group chat on Teams</string>
    <string name="offline">You\'re offline</string>
    <string name="successfully_saved">Successfully saved</string>

    <string name="class_details">Class details</string>
    <string name="class_check_details">Class check details</string>

    <!-- More strings -->
    <string name="qc_admin">QC Admin</string>
    <string name="ta_portal">Open TA Portal</string>
    <string name="trainee_portal">Open Trainee Portal</string>
    <string name="planner">Open Planner</string>
    <string name="teams">Open Microsoft Teams</string>
    <string name="logout">Logout</string>

    <!-- Role strings -->
    <string name="ta">Technical Assistant</string>
    <string name="trainee">Trainee</string>
    <string name="board">Board Member</string>

    <!-- Navigation bar/page titles strings -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_more">More</string>
    <string name="title_problem_list">Problem List</string>
    <string name="title_qc">QC</string>

    <!-- Login page strings -->
    <string name="login_header">Welcome TAs!</string>
    <string name="login_body">Login with your TA account to start QC.</string>
    <string name="login_button">Login</string>
    <string name="acc_not_authorized_header">Account not authorized!</string>
    <string name="acc_not_authorized_message">The account you used is not authorized to use the QC app. Make sure you use your TA account or contact HR department if you do not have one.</string>

    <!-- External Links -->
    <string name="li_ta_portal">https://cloudmails-my.sharepoint.com/personal/ta_cloudmails_apu_edu_my/taportal/</string>
    <string name="li_trainee_portal">https://cloudmails.sharepoint.com/sites/TechnicalAssistantsTrainee</string>
    <string name="li_planner">https://tasks.office.com</string>
    <string name="li_teams">https://teams.microsoft.com</string>
    <string name="intent_teams">msteams://</string>
    <string name="teams_chat_link">https://teams.microsoft.com/l/chat/0/0?users=|users</string>
    <string name="teams_chat_intent">msteams://teams.microsoft.com/l/chat/0/0?users=|users</string>

    <!-- Not allowed screens -->
    <string name="no_access_title">Not Authorized</string>
    <string name="no_access_body">Please check if you have been have the proper permissions to use this feature.</string>

    <string name="just_a_moment">Just a moment...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- QC Admin Sub Sections strings -->
    <string name="add_a_new_class">Add a new class</string>
    <string name="class_name">Class Name</string>
    <string name="save">Save</string>
    <string name="is_projector_deployed">Is Projector Deployed?</string>
    <string name="low_lamp_hour">Low Lamp Hour</string>
    <string name="high_lamp_hour">High Lamp Hour</string>
    <string name="serial_number">Serial Number</string>
    <string name="projector_asset_tag">Projector Asset Tag</string>
    <string name="add_a_projector">Add a projector</string>
    <string name="projector_model">Projector Model</string>

    <string name="add_task">Add Tasks</string>
    <string name="add_projector">Add Projector</string>
    <string name="add_classes">Add Classes</string>
    <string name="add_items">Add items</string>
    <string name="what_do_you_want_to_manage">What do you want to manage?</string>
    <string name="classes">Classes</string>
    <string name="projectors">Projectors</string>
    <string name="add_a_task">Add a task</string>
    <string name="problem">Problem</string>
    <string name="tasks">Tasks</string>
    <string name="added_on">Added on</string>
    <string name="completed_on">Completed on</string>
    <string name="solved_on">Solved on</string>
    <string name="solved">Solved</string>
    <string name="completed">Completed</string>
    <string name="completed_failure">Completed with failure</string>

    <string name="before_we_continue">Before we continue</string>
    <string name="next">Next</string>
    <string name="notice">Notice</string>
    <string name="qc_start_notice_message">Connect the HDMI cable to this device now before clicking on the next button. To cancel, press Cancel or the back button.</string>

    <string name="no_problems_found">No problems found</string>
    <string name="class_checked">Class has been checked</string>
    <string name="problems_found">Problems found</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="check_class">Check Class</string>
    <string name="projector_ip_address">Projector IP Address</string>
    <string name="last_checked">Last Checked</string>
    <string name="checked_on">Checked On</string>
    <string name="checked_by">Checked By</string>
    <string name="alignment">Alignment</string>
    <string name="clarity">Clarity</string>
    <string name="screen">Screen</string>
    <string name="hdmi">HDMI</string>
    <string name="remote">Remote</string>
    <string name="easymp">EasyMP</string>
    <string name="is_switch_ok">Switch</string>
    <string name="guideline">Guideline</string>
    <string name="ap">AP</string>
    <string name="signal_strength">Signal Strength</string>
    <string name="ping">Ping</string>
    <string name="dl_speed">DL Speed</string>
    <string name="ul_speed">UL Speed</string>
    <string name="ip_address">IP Address</string>
    <string name="power_extension">Power Extension</string>
    <string name="add_an_issue">Add an issue</string>
    <string name="closed_on">Closed on</string>
    <string name="location">Location</string>
    <string name="reply">Reply</string>
    <string name="welcome_back">Welcome back,</string>

    <string name="unable_display_class">Unable to display class detail</string>
    <string name="unable_display_class_message">We\'re unable to display the requested class detail. Please try again later.</string>

    <string name="class_added">Class has been added successfully</string>
    <string name="unable_add_class">Unable to add class</string>
    <string name="unable_add_class_message">We\'re unable to add the class. Please try again later.</string>

    <string name="task_added">Task has been added successfully</string>
    <string name="unable_add_task">Unable to add task</string>
    <string name="unable_add_task_message">We\'re unable to add the task. Please try again later.</string>

    <string name="issue_added">Issue has been added successfully</string>
    <string name="unable_add_issue">Unable to add issue</string>
    <string name="unable_add_issue_message">We\'re unable to add the issue. Please try again later.</string>

    <string name="reply_added">Reply added successfully</string>
    <string name="unable_add_reply">Unable to add reply</string>
    <string name="unable_add_reply_message">We\'re unable to add your reply. Please try again later.</string>
    <string name="yay_no_issues">Yay! No issues!</string>

    <string name="unable_display_class_list">Unable to display class list</string>
    <string name="unable_display_issue_list">Unable to display issues list</string>
    <string name="unable_display_task_list">Unable to display tasks list</string>
    <string name="qc_wifi_notice">When Student@APU is not usable, make sure that signal strength is set to zero.</string>
    <string name="it_s_lonely_in_here">It\'s lonely in here</string>
    <string name="this_closes_the_issue_or_task">This closes the issue or task</string>

    <string name="unable_update_class_qc">Your QC check has been saved successfully. However, the class data wasn\'t updated successfully. You may see out-of-date data for the class</string>

    <string name="unable_save_qc">Unable to save QC check</string>
    <string name="unable_save_qc_message">We\'re unable to save your QC check. Please try again later.</string>
    <string name="unable_get_check_history">Unable to get check history</string>
    <string name="unable_get_issue_list">Unable to get issue list</string>
    <string name="close_issue">Close issue</string>
    <string name="reopen_issue">Re-open issue</string>

    <string name="unable_get_issue_detail">Unable to get issue details</string>
    <string name="unable_get_issue_detail_message">We\'re unable to get the requested issue details. Please try again later.</string>
    <string name="issue_updated">Issue updated</string>
    <string name="unable_update_issue">Unable to close/re-open issue</string>
    <string name="unable_update_issue_message">We\'re unable to update the issue details. Please try again later.</string>

    <string name="relogin_message">Sorry that didn\'t work. Please try again</string>
    <string name="require_data">This is required</string>
</resources>