<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.qc.ClassCheckActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/check_topAppBar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_close"
            app:title="@string/title_qc" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_classNameInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/class_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_classNameTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_highLampHourInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/high_lamp_hour">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_highLampHourTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_lowLampHourInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/low_lamp_hour">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_lowLampHourTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="Only fill-in the ping google, signal strength, IP Address, download and upload speeds when Student@APU is useable."/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_ipAddressInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/ip_address">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_ipAddressTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_signalStrengthInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/signal_strength">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_signalStrengthTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_pingGoogleInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/ping">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_pingGoogleTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_ulSpeedInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/ul_speed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_ulSpeedTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/check_dlSpeedInputLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/dl_speed">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/check_dlSpeedTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/alignment" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/clarity" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/screen" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/remote" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:text="@string/short_hdmi" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:checked="true"
                android:text="@string/long_hdmi" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/easymp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/is_switch_ok" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/guideline" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="true"
                android:text="@string/power_extension" />
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>