<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.erwinsuwito.qcapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_qc"
        android:name="com.erwinsuwito.qcapp.ui.qc.QcFragment"
        android:label="@string/title_qc"
        tools:layout="@layout/fragment_qc" />

    <fragment
        android:id="@+id/navigation_more"
        android:name="com.erwinsuwito.qcapp.ui.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />

    <fragment
        android:id="@+id/fragment_qc_admin"
        android:name="com.erwinsuwito.qcapp.ui.qcadmin.QcAdminFragment"
        android:label="@string/qc_admin"
        tools:layout="@layout/fragment_qc_admin" >
        <action
            android:id="@+id/action_fragment_qc_admin_to_noPermissionsFragment"
            app:destination="@id/noPermissionsFragment" />
        <action
            android:id="@+id/action_fragment_qc_admin_to_addClassFragment"
            app:destination="@id/addClassFragment" />
        <action
            android:id="@+id/action_fragment_qc_admin_to_addProjecforFragment"
            app:destination="@id/addProjectorFragment" />
        <action
            android:id="@+id/action_fragment_qc_admin_to_projectorListFragment"
            app:destination="@id/projectorListFragment" />
    </fragment>

    <fragment
        android:id="@+id/noPermissionsFragment"
        android:name="com.erwinsuwito.qcapp.ui.noperm.NoPermissionsFragment"
        android:label="@string/no_access_title"
        tools:layout="@layout/fragment_no_permissions" />
    <fragment
        android:id="@+id/addProjectorFragment"
        android:name="com.erwinsuwito.qcapp.ui.qcadmin.AddProjectorFragment"
        android:label="@string/qc_admin"
        tools:layout="@layout/fragment_add_projector" />
    <fragment
        android:id="@+id/addClassFragment"
        android:name="com.erwinsuwito.qcapp.ui.qcadmin.AddClassFragment"
        android:label="@string/qc_admin"
        tools:layout="@layout/fragment_add_class" />
    <fragment
        android:id="@+id/projectorListFragment"
        android:name="com.erwinsuwito.qcapp.ui.qcadmin.ProjectorListFragment"
        android:label="@string/qc_admin"
        tools:layout="@layout/fragment_projector_list">
        <action
            android:id="@+id/action_projectorListFragment_to_addProjectorFragment"
            app:destination="@id/addProjectorFragment" />
    </fragment>

</navigation>