<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".ui.qc.AddIssueFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_an_issue"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue_classNameInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/class_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issue_classNameTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/issue_problemInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/problem">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/issue_problemTextBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textLongMessage"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/issue_saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:height="32dp"
        android:backgroundTint="@color/theme_purple_lighter"
        android:text="@string/save" />

</LinearLayout>